# picizen

./: .dockerignore  .env.example  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  docker-compose-dev.yaml  justfile  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini
accounts/: admin.py  gql.py  models.py
accounts/migrations/: 0001_initial.py
core/: apps.py  models.py  signals.py
core/migrations/: 0001_initial.py
core/tests/: test_signals.py
coverage/: .coveragerc
docker/: entrypoint.sh  nginx.conf  server  webui
photos/: admin.py  apps.py  forms.py  gql.py  models.py  signals.py  tasks.py  views.py
photos/management/commands/: fix_permissions.py  reprocess_photos.py
photos/migrations/: 0001_initial.py  0002_photo_blurhash.py  0003_photo_camera_make_photo_camera_model_and_more.py  0004_album_access_rules_photo_access_rules.py
photos/templates/photos/: assign_perm.html
photos/tests/: factories.py  test_gql.py  test_management.py  test_models.py  test_signals.py  test_tasks.py  test_views.py
picizen/: asgi.py  celery.py  gql.py  helpers.py  settings.py  tests.py  urls.py  wsgi.py
picizen/templates/: index.html
webui/: codegen.yml  package-lock.json  package.json  vite.config.ts
webui/src/: App.vue  main.ts  router.ts
webui/src/components/: AlbumCard.vue  Blurhash.vue  Breadcrumbs.vue  Choices.vue  LazyImage.vue  PhotoCard.vue  PhotoList.vue  ShareMenu.vue  Upload.vue
webui/src/gql/: gql.ts  graphql.ts
webui/src/helpers/: apollo.ts  progress-fetch.ts
webui/src/pages/: AlbumDetail.vue  AlbumList.vue  Home.vue  Login.vue  PhotoDateList.vue  PhotoDetail.vue  PhotoList.vue
webui/src/stores/: user.ts
webui/src/styles/: base.scss
webui/src/types/: ImageType.ts
